v10/fixtures/ast/errors/struct_named_missing_field/source.able
struct Point {
  x: i32,
  y: i32
}

p := Point { x: 1, y: 2 }
Point { x: x, z: z } := p
